# Rabbitbam2fq

./: BAM2FQ.md  BWA&&samtools.md  BamBlock.cpp  BamBlock.h  Buffer.cpp  CMakeLists.txt  README.md  SRR_fastqc_bam.html  SRR_fastqc_fastqc.html  block_mul.cpp  block_one.c  block_zip.cpp  bufferandcopyone.cpp  cc.sh  ch.sh  cr.sh  fast  fast.c  fast.cpp  fqSort  fqSort.cpp  fq_write.c  imake.sh  less_size.cpp  main  main.c  main.cpp  main_muliti.cpp  main_one.cpp  main——last.cpp  make.sh  mm.sh  mr.sh  muliti_write.cpp  noOMP.sh  rm.sh  run.sh  test  test.cpp  test2bt.c  (+8 more)
HTSLIB/lib/: libhts.1.10.2.dylib  libhts.1.11.dylib  libhts.3.dylib
VTUNE/: main
VTUNE/fast-thread2/: r002hs.vtune
VTUNE/r000hs/: r000hs.vtune
VTUNE/r001hs/: r001hs.vtune
VTUNE/r002hs/: r002hs.vtune
VTUNE/test_view- thread1/: r000hs.vtune
VTUNE/test_view-single/: r001hs.vtune
VTUNE/test_view-thread2/: r002hs.vtune
VTUNE/test_view-thread4/: r003hs.vtune
htslib-1.10.2/: bgzip  config.status  htsfile  sam.c  tabix
htslib-1.10.2/test/: fieldarith  hfile  hts_endian  pileup  sam  test-bcf-sr  test-bcf-translate  test-parse-reg  test-regidx  test-vcf-api  test-vcf-sweep  test_bgzf  test_index  test_kstring  (+3 more)
htslib-1.11/: bgzf.c  bgzip  config.mk  config.status  hts.c  htsfile  htslib-uninstalled.pc  libhts.dylib  sam.c  sam_internal.h  tabix  thread_pool.c
htslibNew/: bgzf.c  bgzip  config.status  configure  htsfile  htslib-uninstalled.pc  libhts.dylib  sam.c  sam_internal.h  tabix  thread_pool.c
samtools-1.11/: bam_fastq.c  config.h  config.mk  config.status  samtools  version.h
(+332 files in other folders)
